Fix for button background colour not showing

--- a/resources/assets/styles/components/_buttons.scss
+++ b/resources/assets/styles/components/_buttons.scss
@@ -10,7 +10,6 @@
 
   &.alternative {
     @extend .text-secondary;
-
-    background: theme-color("white");
+    @extend .bg-white;
   }
 }
